# rust-api

./: Cargo.toml  readme.md
api/: Cargo.toml
api/src/controllers/: category_controller.rs  film_controller.rs  mod.rs
api/src/services/: app_state.rs  faker.rs  mod.rs  server.rs
entity/: Cargo.toml
entity/src/: category.rs  film.rs  lib.rs
entity/src/entity/: category.rs  film.rs  mod.rs
entity/src/fixtures/: category_fixtures.rs  film_fixtures.rs  mod.rs
entity/src/repository/: category_repository.rs  film_repository.rs  mod.rs
migration/: Cargo.toml
migration/src/: create_category_table.rs  create_film_table.rs  lib.rs  m20221110_025506_create_film_table.rs
src/: main.rs
