[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
serde = { version = "1.0.142", features=["derive"] }
serde_json = "1.0.83"
actix-web = "4"
sea-orm = {version = "^0.10.1", features = ["debug-print", "runtime-async-std-native-tls", "sqlx-sqlite"]}