[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm = {version = "^0.10.1", features = ["debug-print", "runtime-async-std-native-tls", "sqlx-sqlite"]}